[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_kucoin"
version = "0.15.0"
description = "KuCoin exchange plugin for bt_api framework - Global cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "kucoin",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.entry-points."bt_api.plugins"]
kucoin = "bt_api_kucoin.plugin:register_plugin"

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_kucoin"
Documentation = "https://bt-api-kucoin.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_kucoin"
Issues = "https://github.com/cloudQuant/bt_api_kucoin/issues"
Changelog = "https://github.com/cloudQuant/bt_api_kucoin/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bt_api_kucoin = ["configs/*.yaml"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
